--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ A parte queremos que sea un espacio de diversión y juegos, dejando a un lado el
 <a name="multimedia"></a>
 <section class="section">
 <h2 class="section-title">Multimedia</h2>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/TjtfNC9MIf8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="video" width="560" height="315" src="https://www.youtube-nocookie.com/embed/TjtfNC9MIf8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
 
